# data-dict-generator

./: .env.example  .gitignore  README.md  app.py  generate.py  pyproject.toml  requirements.txt  start.sh
sample_data/: create_sample_db.py
sample_output/: catalog.html  catalog.md
src/: catalog_builder.py  introspector.py  llm_describer.py  profiler.py
templates/: catalog.html.j2  catalog.md.j2
tests/: test_introspector.py  test_profiler.py
