[project]
name = "data-dict-generator"
version = "0.1.0"
description = "AI-powered database catalog generator with Ollama + Streamlit"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.2.0",
    "jinja2>=3.1.4",
    "streamlit==1.36.0",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "markdown>=3.6",
]

[dependency-groups]
dev = ["pytest>=8.2.2"]

[tool.uv]
package = false
